8189689: JavaFX build fails with gcc 6

Fix wait(status) + linux gradle build

Reviewed-by: kcr, lbourges